<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_teleop_snap</name>
  <version>0.0.0</version>
  <description>meta package for ros2 teleop snap dependencies</description>
  <maintainer email="canonical-robotics-brand@canonical.com">ubuntu-robotics</maintainer>
  <license>GPLv3</license>

  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>
